# aac-decoder

./: README.md
aacdecoder-android/.svn/: all-wcprops  entries
aacdecoder-android/branches/.svn/: all-wcprops  entries
aacdecoder-android/branches/opencore2009/.svn/: all-wcprops  entries
aacdecoder-android/branches/opencore2009/decoder/.svn/: all-wcprops  entries
aacdecoder-android/branches/opencore2009/decoder/jni/.svn/: all-wcprops  entries
aacdecoder-android/branches/opencore2009/decoder/src/.svn/: all-wcprops  entries
aacdecoder-android/branches/opencore2009/player/.svn/: all-wcprops  entries
aacdecoder-android/branches/opencore2009/player/res/.svn/: all-wcprops  entries
aacdecoder-android/branches/opencore2009/player/src/.svn/: all-wcprops  entries
aacdecoder-android/branches/release/.svn/: all-wcprops  dir-prop-base  entries
aacdecoder-android/branches/release/decoder/.svn/: all-wcprops  entries
aacdecoder-android/branches/release/decoder/jni/.svn/: all-wcprops  entries
aacdecoder-android/branches/release/decoder/src/.svn/: all-wcprops  entries
aacdecoder-android/branches/release/player/.svn/: all-wcprops  entries
aacdecoder-android/branches/release/player/res/.svn/: all-wcprops  entries
aacdecoder-android/branches/release/player/src/.svn/: all-wcprops  entries
aacdecoder-android/tags/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.5.1/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.5.1/decoder/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.5.1/decoder/jni/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.5.1/decoder/src/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.5.1/player/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.5.1/player/res/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.5.1/player/src/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.5/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.5/decoder/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.5/decoder/jni/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.5/decoder/src/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.5/player/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.5/player/res/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.5/player/src/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.6.1/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.6.1/decoder/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.6.1/decoder/jni/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.6.1/decoder/src/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.6.1/player/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.6.1/player/res/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.6.1/player/src/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.6/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.6/decoder/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.6/decoder/jni/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.6/decoder/src/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.6/player/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.6/player/res/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.6/player/src/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.7/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.7/decoder/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.7/decoder/jni/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.7/decoder/src/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.7/player/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.7/player/res/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.7/player/src/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.8/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.8/decoder/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.8/decoder/jni/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.8/decoder/src/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.8/player/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.8/player/res/.svn/: all-wcprops  entries
aacdecoder-android/tags/0.8/player/src/.svn/: all-wcprops  entries
aacdecoder-android/trunk/: .ant.properties  default.properties
aacdecoder-android/trunk/.svn/: all-wcprops  entries
aacdecoder-android/trunk/decoder/: build.xml
aacdecoder-android/trunk/decoder/.svn/: all-wcprops  entries
aacdecoder-android/trunk/decoder/jni/: Android.mk  Application.mk  mp3dec.sh
aacdecoder-android/trunk/decoder/jni/.svn/: all-wcprops  entries
aacdecoder-android/trunk/decoder/jni/aac-decoder/: Android.mk  decoder-opencore-aacdec.mk  decoder-opencore-mp3dec.mk  make.sh
aacdecoder-android/trunk/decoder/jni/aac-decoder/.svn/: all-wcprops  entries
aacdecoder-android/trunk/decoder/jni/opencore-aacdec/: Android.mk
aacdecoder-android/trunk/decoder/jni/opencore-aacdec/.svn/: all-wcprops  entries
aacdecoder-android/trunk/decoder/jni/opencore-mp3dec/: Android.mk
aacdecoder-android/trunk/decoder/jni/opencore-mp3dec/.svn/: all-wcprops  entries
aacdecoder-android/trunk/decoder/src/.svn/: all-wcprops  entries
aacdecoder-android/trunk/decoder/src/com/.svn/: all-wcprops  entries
aacdecoder-android/trunk/player/: default.properties
aacdecoder-android/trunk/player/.svn/: all-wcprops  entries
aacdecoder-android/trunk/player/res/.svn/: entries
aacdecoder-android/trunk/player/res/layout/.svn/: entries
aacdecoder-android/trunk/player/res/values-cs/.svn/: entries
aacdecoder-android/trunk/player/src/.svn/: all-wcprops  entries
aacdecoder-android/wiki/.svn/: all-wcprops  entries
android-opencore-20120628-patch-stereo/: Config.mk
android-opencore-20120628-patch-stereo/codecs_v2/audio/aac/dec/: Android.mk
android-opencore-20120628-patch-stereo/codecs_v2/audio/mp3/dec/: Android.mk
mp3dec/jni/: Application.mk
opencore-aacdec/: Makefile.am  configure.ac
opencore-aacdec/sample/: Makefile.am  aacNetPlayer.c  audio.c  audio.h  decoder_aac.c  ringbuffer.h  wav.c  wav.h
(+220 files in other folders)
